--- a/Css/Style.css
+++ b/Css/Style.css
@@ -296,14 +296,14 @@ header .hero {
    margin-top: 30px;
  }
 
-.one .three{
-    padding-bottom: 20;
-    
+ 
+.testimonials .stagger1 {
+ margin-top: 30px;
 }
 
-
-
-
+.testimonials .stagger2 {
+ margin-top: 30px;
+}
 
 
 
