--- a/Css/Style.css
+++ b/Css/Style.css
@@ -367,15 +367,77 @@ header .hero {
    background:#F7F7F7;
  }
  .left-nav {
-   height: 100vh;
-   width:14.66666667%;
-   color:#FFFFFF;
-   background: #34495E;
-   background-image: linear-gradient(206deg, #5F81A3 0%, #34495E 94%);
-   float:left;
-   position: fixed;
-   display:block;
+   height: 100%;
+   width:280;
+  
+   position: absolute;
+     
+     -webkit-transition: all 0.3s ease-in-out;
+   -moz-transition: all 0.3s ease-in-out;
+   -o-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+   transform: translate(-280px,0);
+     -webkit-transform: translate(-280px,0); /** Chrome & Safari **/
+     -o-transform: translate(-280px,0); /** Opera **/
+     -moz-transform: translate(-280px,0); /** Firefox **/
+   
  }
+
+
+.left-nav.open {
+   display:block;
+   width:280px;
+   -webkit-transition: all 0.3s ease-in-out;
+   -moz-transition: all 0.3s ease-in-out;
+   -o-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+   transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+     z-index: 100;
+ }
+ .hamburger {
+   position:absolute;
+   z-index: 1000;
+   background:#34495E;
+   color:#FFF;
+   text-decoration: none;
+   font-size: 22px;
+   padding: 10px 15px;
+   border-radius: 4px;
+   left: 5px;
+   top: 15px;
+ }
+
+@media (min-width:992px) {
+   .left-nav {
+     height: 100vh;
+     width:14.66666667%;
+     color:#FFFFFF;
+     background: #34495E;
+     background-image: linear-gradient(206deg, #5F81A3 0%, #34495E 94%);
+     float:left;
+     position: fixed;
+     display:block;
+     transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+   }
+   .left-nav.open {
+     width:14.66666667%;
+     transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+   }
+   .hamburger {
+     display:none;
+   }
+ }
+
+
  .left-nav .logo {
    padding:20px 0;
    background:#34495E;
@@ -439,6 +501,8 @@ header .hero {
 
 
 /* LEFT NAVBAR SETTINGS */
+
+
  .left-nav .settings {
    position:absolute;
    background:#22303E;
@@ -589,3 +653,65 @@ header .hero {
  }
 
 /*dropit*/
+
+.dropit {
+  list-style: none;
+  padding: 0;
+  margin: 16px 0 0;
+  float:right;
+  display:inline-block;
+}
+
+.dropit .dropit-trigger { position: relative; }
+.dropit .dropit-submenu {
+  position: absolute;
+  top: 100%;
+  right: 10px; /* dropdown left or right */
+  z-index: 1000;
+  display: none; 
+  min-width: 100px;
+  list-style: none;
+  padding: 20px;
+  margin: 20px 0 0;
+   
+}
+.dropit .dropit-open .dropit-submenu {
+  display: block;
+   background: #FFFFFF;
+   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.30);
+   border-radius: 4px;
+    margin-top: 20px;
+  margin-right: 20px;
+}
+ 
+.dropit .dropit-open .dropit-submenu:after {
+  content: " ";
+  position: absolute;
+  border-style: solid;
+  border-width: 0 8px 8px;
+  border-color: #FFFFFF transparent;
+  display: block;
+  width: 0px;
+  z-index: 1;
+  top:-8px;
+right: 10px;
+    
+ }
+.dropit .dropit-open .dropit-submenu li {
+  display: block;
+  margin-bottom: 20px;
+    text-align: left 10;
+    padding-top: 10px;
+    padding-left: 10px;
+ }
+ .dropit .dropit-open .dropit-submenu li:last-child {
+  margin-bottom: 10px;
+     
+     
+ }
+ .dropit .dropit-open .dropit-submenu li a {
+  color:#34495E;
+  text-decoration: none;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight:100;
+ }
