--- a/Css/Style.css
+++ b/Css/Style.css
@@ -397,7 +397,8 @@ header .hero {
      -moz-transform: translate(0,0); /** Firefox **/
      z-index: 100;
  }
- .hamburger {
+ 
+.hamburger {
    position:absolute;
    z-index: 1000;
    background:#34495E;
@@ -425,6 +426,11 @@ header .hero {
      -o-transform: translate(0,0); /** Opera **/
      -moz-transform: translate(0,0); /** Firefox **/
    }
+    
+   .hamburger {
+     display:none;
+   }
+ }
    .left-nav.open {
      width:14.66666667%;
      transform: translate(0,0);
@@ -432,11 +438,7 @@ header .hero {
      -o-transform: translate(0,0); /** Opera **/
      -moz-transform: translate(0,0); /** Firefox **/
    }
-   .hamburger {
-     display:none;
-   }
- }
-
+  
 
  .left-nav .logo {
    padding:20px 0;
@@ -662,7 +664,9 @@ header .hero {
   display:inline-block;
 }
 
-.dropit .dropit-trigger { position: relative; }
+.dropit .dropit-trigger { 
+    position: relative; 
+}
 .dropit .dropit-submenu {
   position: absolute;
   top: 100%;
@@ -715,3 +719,22 @@ right: 10px;
   font-family: "Lato", Helvetica, Arial, sans-serif;
   font-weight:100;
  }
+
+/*menu-setting*/
+.menu-setting .dropit {
+  list-style: none;
+  padding: 0;
+  margin: 16px 0 0;
+  
+  display:inline-block;
+}
+.menu-setting .dropit-submenu {
+  position: absolute;
+  
+  float: left;
+  z-index: 1000;
+  display: none; 
+  min-width: 100px;
+    list-style: none;
+}
+  
