--- a/Css/Style.css
+++ b/Css/Style.css
@@ -369,10 +369,10 @@ header .hero {
  .left-nav {
    height: 100%;
    width: 280px;
-  
+   color:#FFFFFF;
+   background: #34495E;
    position: absolute;
-     
-     -webkit-transition: all 0.3s ease-in-out;
+    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
@@ -453,8 +453,8 @@ header .hero {
    font-weight: 600;
    text-transform: uppercase;
    font-size: 12px;
-   color: #FFFFFF;
-   line-height: 30px;
+   color: #E2E2E2;
+   line-height: 15px;
  }
  .left-nav .items ul {
    margin:0 0 40px;
